[package]
name = "prove"
version = "0.1.0"
authors = ["uben <uben@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["unicode"]
unicode = []
use_serde = ["serde"]

[dependencies]
serde = {version="1.0", optional=true, features=["derive"]}